--- a/presentation_plots.ipynb
+++ b/presentation_plots.ipynb
@@ -49,6 +49,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5174a961",
+   "metadata": {},
+   "source": [
+    "# Differential Equation Solver plots"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "74924aed",
