clean up notebook

--- a/presentation_plots.ipynb
+++ b/presentation_plots.ipynb
@@ -37,8 +37,7 @@
     "    create_callables,\n",
     "    generate_reaction_network,\n",
     ")\n",
-    "from src.diff_eq_simulator import (simulate_differential_equation,\n",
-    "    simulate_network)\n",
+    "from src.diff_eq_simulator import (simulate_differential_equation)\n",
     "from src.diff_eq_recreator import (regressor_fit, rand_runner, data_set_bundler)\n",
     "from src.utils import lotka_volterra, derivative_finder_diff\n"
    ]
@@ -59,7 +58,15 @@
    "id": "5174a961",
    "metadata": {},
    "source": [
-    "# Differential Equation Solver plots"
+    "# Differential Equation Solver - Lotka-Volterra Example"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bff3870f",
+   "metadata": {},
+   "source": [
+    "## Creating a simulated system"
    ]
   },
   {
@@ -128,7 +135,7 @@
    "id": "d6ed55e6",
    "metadata": {},
    "source": [
-    "# pysr initial example"
+    "## Generating Bulk Simulation Sets"
    ]
   },
   {
@@ -188,63 +195,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0e346f91",
+   "metadata": {},
+   "source": [
+    "## Apply SR"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "0d2690e9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "model_lv = pysr.PySRRegressor(\n",
-    "    maxsize=20,\n",
-    "    # populations=4,\n",
-    "    niterations=10,  # < Increase me for better results\n",
-    "    binary_operators=[\"+\", \"*\"],\n",
-    "    # unary_operators=[\n",
-    "    #     \"cos\",\n",
-    "    #     \"exp\",\n",
-    "    #     \"sin\",\n",
-    "    #     \"inv(x) = 1/x\",\n",
-    "    #     # ^ Custom operator (julia syntax)\n",
-    "    # ],\n",
-    "    # extra_sympy_mappings={\"inv\": lambda x: 1 / x}, # make sure to remove this if unary_operators are taken out\n",
-    "    # ^ Define operator for SymPy as well\n",
-    "    elementwise_loss=\"loss(prediction, target) = (prediction - target)^2\",\n",
-    "    # ^ Custom loss function (julia syntax)\n",
-    "    # warm_start=True,\n",
-    "    # early_stop_condition=\"f(loss, complexity) = (loss < 0.003) && (complexity < 10)\",\n",
-    "    # turbo=True, # not any faster?\n",
-    "    # autodiff_backend=\"Zygote\", # extremely slow. Try on cluster?\n",
-    "    verbosity=0,\n",
-    ")\n",
-    "\n",
-    "# print(merged_qty_data_lv.shape)\n",
-    "# print(merged_qty_drv_lv.shape)\n",
-    "model_lv.fit(\n",
+    "regressor_fit(\n",
     "    merged_qty_data_lv,\n",
     "    merged_qty_drv_lv,\n",
+    "    niterations=10,\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3994c894",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_lv.equations_[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b5416696",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "model_lv.equations_[1]"
    ]
   },
   {
@@ -252,7 +221,15 @@
    "id": "605c3186",
    "metadata": {},
    "source": [
-    "# Random Network Testing"
+    "# Generate and Solve a Reaction Network"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f0a4bcc",
+   "metadata": {},
+   "source": [
+    "## Generate and Simulate the Network"
    ]
   },
   {
@@ -270,33 +247,20 @@
     "    seed=14,\n",
     ")\n",
     "for ode in rnet.odes:\n",
-    "    print(sp.printing.latex(ode))\n",
-    "for ode in rnet.odes:\n",
     "    display_latex(Latex(fr\"${sp.printing.latex(ode)}$\"))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f19f21f",
+   "id": "88136526",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# np.random.seed(1)\n",
     "runs_h = 3\n",
     "runs_w = 4\n",
     "qty_data, times_data = rand_runner(rnet, np.array([1]*len(rnet.species)), runs=runs_h * runs_w)\n",
-    "print(len(qty_data))\n",
-    "print(len(times_data))\n",
-    "print(qty_data[0].shape)\n",
-    "print(times_data[0].shape)\n",
-    "\n",
-    "merged_qty_data, merged_times_data, merged_qty_drv = data_set_bundler(qty_data, times_data)\n",
-    "\n",
-    "print(merged_qty_data.shape)\n",
-    "print(merged_times_data.shape)\n",
-    "print(merged_qty_drv.shape)"
+    "merged_qty_data, merged_times_data, merged_qty_drv = data_set_bundler(qty_data, times_data)"
    ]
   },
   {
@@ -310,7 +274,6 @@
     "fig = plt.figure(layout=\"constrained\")\n",
     "fig.set_size_inches(\n",
     "    9, 6)\n",
-    "# fig.tight_layout(pad=10.5)\n",
     "\n",
     "axes = fig.subplots(runs_h, runs_w)\n",
     "\n",
@@ -327,6 +290,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d8673b7b",
+   "metadata": {},
+   "source": [
+    "## Apply SR"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e688f86b",
@@ -338,104 +309,13 @@
     "except NameError:\n",
     "    pass\n",
     "\n",
-    "model = pysr.PySRRegressor(\n",
-    "    maxsize=20,\n",
-    "    # populations=4,\n",
-    "    niterations=50,  # < Increase me for better results\n",
-    "    binary_operators=[\"+\", \"*\"],\n",
-    "    # unary_operators=[\n",
-    "    #     \"cos\",\n",
-    "    #     \"exp\",\n",
-    "    #     \"sin\",\n",
-    "    #     \"inv(x) = 1/x\",\n",
-    "    #     # ^ Custom operator (julia syntax)\n",
-    "    # ],\n",
-    "    # extra_sympy_mappings={\"inv\": lambda x: 1 / x}, # make sure to remove this if unary_operators are taken out\n",
-    "    # ^ Define operator for SymPy as well\n",
-    "    elementwise_loss=\"loss(prediction, target) = (prediction - target)^2\",\n",
-    "    # ^ Custom loss function (julia syntax)\n",
-    "    # warm_start=True,\n",
-    "    # early_stop_condition=\"f(loss, complexity) = (loss < 0.003) && (complexity < 10)\",\n",
-    "    # turbo=True, # not any faster?\n",
-    "    # autodiff_backend=\"Zygote\", # extremely slow. Try on cluster?\n",
-    "    verbosity=0,\n",
+    "model = regressor_fit(\n",
+    "    merged_qty_data,\n",
+    "    merged_qty_drv,\n",
+    "    niterations=50,\n",
     ")\n",
     "\n",
-    "model.fit(\n",
-    "    merged_qty_data,\n",
-    "    # merged_qty_drv[:,2],\n",
-    "    merged_qty_drv,\n",
-    ")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "60ff5a94",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "sp.printing.latex(model.equations_[0]['sympy_format'].iloc[6])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "986d4cd1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "sp.printing.latex(model.equations_[1]['sympy_format'].iloc[6])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1802b310",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# model.equations_[2]['sympy_format'].loc[10]\n",
-    "sp.printing.latex(model.equations_[2]['sympy_format'].iloc[8])\n",
-    "# model.equations_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6e78bbd6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "for ode in rnet.odes:\n",
-    "    display_latex(Latex(fr\"${sp.printing.latex(ode)}$\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "839d144f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "np.sum((3.352 * merged_qty_data[:,0] ** 2 - 1.31 * merged_qty_data[:,1] * merged_qty_data[:,2]**2 - merged_qty_drv[:,2])**2)\n",
-    "    \n",
-    "    # merged_qty_drv,"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d05d013e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "np.sum((5.632511 * merged_qty_data[:,0] - 1.3104805 * merged_qty_data[:,1] * merged_qty_data[:,2]**2 - 2.339048 - merged_qty_drv[:,2] )**2)"
+    "model"
    ]
   }
  ],
