--- a/presentation_plots.ipynb
+++ b/presentation_plots.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "1e3c5646",
+   "metadata": {},
+   "source": [
+    "# Presentation Plots and Examples\n",
+    "\n",
+    "This notebook includes the the code used to generate the plots used in presentation. This also serves as an example of how to include tools from the libraries."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "6c608914",
@@ -10,6 +20,8 @@
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
+    "\n",
+    "# You may need to uncomment this line depending on your jupyter client\n",
     "# %matplotlib inline"
    ]
   },
