--- a/presentation_plots.ipynb
+++ b/presentation_plots.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Presentation Plots and Examples\n",
     "\n",
-    "This notebook includes the the code used to generate the plots used in presentation. This also serves as an example of how to include tools from the libraries."
+    "This notebook includes the the code used to generate the plots used in presentation. This also serves as an example of how to include tools from the libraries. Run the notebook locally to generate the plots. Set the global variable `SAVE_FIG` to save/discard the plots."
    ]
   },
   {
@@ -255,7 +255,6 @@
     "rnet = generate_reaction_network(\n",
     "    num_species=3,\n",
     "    num_reactions=4,\n",
-    "    # seed=3,\n",
     "    seed=14,\n",
     ")\n",
     "for ode in rnet.odes:\n",
